--- a/static/css/specialSubgroup.css
+++ b/static/css/specialSubgroup.css
@@ -763,7 +763,19 @@
 	float: left;
 	width: 300px;
 }
-
+#main—box .list{
+	position: relative;
+}
+#leftPage{
+	position: absolute;
+	bottom: 0px;
+	left: 80px;
+}
+#rightPage{
+	position: absolute;
+	bottom: 0px;
+    left: 325px;
+}
 #main—box .left .list {
 	border: 1px solid #DEDEDE;
 	height: 372px;
@@ -786,7 +798,6 @@
 #main—box  .list table tr:nth-child(even) {
 	background: #FFFFFF;
 }
-
 #leftPage,#rightPage {
 	text-align: center;
 }
